--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.1
-multidict==6.0.3
+#multidict==6.0
 orjson==3.8.0
 packaging==21.3
 passlib==1.7.4
